# maui-agenda

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/code/: main.cpp
src/controls/: main.qml
